<resources>
    <string name="app_name">ذكي</string>
    <string name="start">Start</string>
    <string name="start_De">
        A smart application for student services Now you can listen All services What you may need in your school day
    </string>
    <string name="next">Next</string>
    <string name="next1_De">
        Know your academic information, study schedules, sections and other dministrative services
    </string>
    <string name="next2_De">
        Communicate with your colleagues in the same group and share files related to study materials
    </string>
    <string name="usarname">UsarName</string>
    <string name="password">PassWord</string>
    <string name="sinup">SINUP</string>
    <string name="schedules">schedules</string>
    <string name="Section_table">Section table</string>
    <string name="Student_chat">Student chat</string>
    <string name="common_questions">Common questions</string>
    <string name="student_services">Student services</string>
    <string name="notifications">Notifications</string>
    <string name="SINOUT">Sin out</string>
    <string name="Transfer_to_another_group">Transfer to another group</string>
    <string name="Exam_result">Exam result</string>
    <string name="Academy_website">Academy website</string>
    <string name="Write_the_message">Write the message .....</string>
    <string name="notavalabol">Not available at the present time ..... soon</string>
    <string name="note">Notes</string>

    <string name="day">Choose a day</string>

    <string-array name="days">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <!--إتب الأسإلة والأجوبة-->

    <string name="a1">Is it possible to transfer to another group?</string>
    <string name="b1">Yes, it is possible to transfer to another group, but with conditions</string>
    <string name="a2">What are the conditions for transferring from one group to another?</string>
    <string name="b2">That there are empty places in the group you want, and this is done through the guidance office</string>
    <string name="a3">What does the letter (م) in the table mean or symbolize?</string>
    <string name="b3">The letter (م) in the table stands for inserted</string>
    <string name="a4">What do two letters (مع) in the table mean or symbolize?</string>
    <string name="b4">The two letters (مع) in the table symbolize the laboratory</string>
    <string name="a5">Where is Lecture Hall 5 located?</string>
    <string name="b5">It is located in (Building C)</string>
    <string name="a6">Where is Lecture Hall 6 located?</string>
    <string name="b6">It is located in (Building C)</string>
    <string name="a7">Where is Lecture Hall 7 located?</string>
    <string name="b7">It is located in (Building C)</string>
    <string name="a8">Where is Lecture Hall 1 located?</string>
    <string name="b8">It is located in (Administrative Building A)</string>
    <string name="a9">Where is Lecture Hall 2 located?</string>
    <string name="b9">It is located in (Administrative Building A)</string>
    <string name="a10">Where is Lecture Hall 3 located?</string>
    <string name="b10">It is located in (Administrative Building A)</string>
    <string name="a11">Where is Lecture Hall 4 located?</string>
    <string name="b11">It is located in (Administrative Building A)</string>
    <string name="a12">Where are the laboratories located?</string>
    <string name="b12">Most of the laboratories are located in (Administrative Building A)</string>
    <string name="a13">Where is the guidance office located?</string>
    <string name="b13">It is located in (Administrative Building A)</string>


    <string name="wat">Please wait until ( Message Send ) is shown to send the following message</string>
    <string name="message_Send">Message Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Map"> Location in map "Access" </string>
</resources>