<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Servise_Activity"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal"
        android:background="@color/hider"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0.01"
            android:background="@color/null2"
            android:scaleType="fitCenter"
            android:src="@drawable/back3"
            android:layout_gravity="center"
            android:layout_marginStart="11dp"
            android:onClick="backmi"

            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:text="@string/student_services"
            android:gravity="center"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginVertical="15dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_weight="2"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:text="@string/Transfer_to_another_group"
        android:onClick="notnaw"
        android:background="@drawable/custom_btnser"
        style="@style/textse"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:text="@string/Exam_result"
        android:background="@drawable/custom_btnser"
        style="@style/textse"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:text="@string/Academy_website"
        android:background="@drawable/custom_btnser"
        style="@style/textse"
        android:onClick="acadimic"
        />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:text="@string/Map"
        android:background="@drawable/custom_btnser"
        style="@style/textse"
        android:onClick="map"
        />
</LinearLayout>