<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main_Activity"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_hed"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            style="@style/textdetals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView2"
            style="@style/textdetals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView3"
            style="@style/textdetals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="187dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="36dp">

                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="167dp"
                    android:layout_height="118dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_btnmen"
                    android:onClick="button"
                    android:scaleType="fitCenter"
                    android:src="@drawable/calender_1" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="164dp"
                    android:layout_height="118dp"
                    android:layout_marginLeft="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_btnmen"
                    android:scaleType="center"
                    android:src="@drawable/calender_2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="38dp"
                android:layout_marginTop="5dp"

                >

                <TextView
                    style="@style/textmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:gravity="center"
                    android:text="@string/schedules"

                    />

                <TextView
                    style="@style/textmin"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Section_table" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="187dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="23dp">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="167dp"
                    android:layout_height="118dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_btnmen"
                    android:scaleType="centerCrop"
                    android:src="@drawable/chat" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="167dp"
                    android:layout_height="118dp"
                    android:layout_marginLeft="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_btnmen"
                    android:onClick="qanda"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chatte" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="38dp"
                android:layout_marginTop="5dp"

                >

                <TextView
                    style="@style/textmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:gravity="center"
                    android:text="@string/Student_chat"

                    />

                <TextView
                    style="@style/textmin"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/common_questions" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="187dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="23dp">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="167dp"
                    android:layout_height="118dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_btnmen"
                    android:onClick="ser"
                    android:scaleType="fitCenter"
                    android:src="@drawable/service_support_icon" />

                <pl.droidsonroids.gif.GifImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="167dp"
                    android:layout_height="118dp"
                    android:layout_marginLeft="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_btnmen"
                    android:scaleType="centerInside"
                    android:src="@drawable/animation_notifi" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="38dp"
                android:layout_marginTop="5dp"

                >

                <TextView
                    style="@style/textmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:gravity="center"
                    android:text="@string/student_services"

                    />

                <TextView
                    style="@style/textmin"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/notifications" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_btnmen_exit"
                    android:onClick="sinout"
                    android:text="@string/SINOUT"
                    android:textColor="#5C000000"
                    android:textSize="24dp" />

            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>